--- a/README.org
+++ b/README.org
@@ -12,7 +12,7 @@ can read [[http://www.math.uwaterloo.ca/tsp/world/countries.html][my blog post e
 
 [[file:diagrams/uruguay.gif]]
 
-To run the code, only Python 3 and the dependencies (=matplotlib= and =numpy=,
+To run the code, only Python 3 and the dependencies (=matplotlib=, =numpy= and =pandas=,
 which are included in the Anaconda distribution by default) are needed. To run
 the code, simply execute:
 
