--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 #+AUTHOR: Diego Vicente Martín
 #+EMAIL:  mail@diego.codes
 
-  * Changes by Y-Shy@Github：
+  * Changes from Y-Shy@Github：
     * A ch34.tsp data file was added: 34 cities from china. Hong Kong, Macao, Taipei, Haikou included 
     * Changes in ./src/main.py
      * Argv related lines were deleted
